@@ -1,20 +1,19 @@
 <launch4jConfig>
   <dontWrapJar>true</dontWrapJar>
-  <headerType>0</headerType>
+  <headerType>gui</headerType>
   <jar>jsXe.jar</jar>
   <outfile>build\jsXe.exe</outfile>
   <errTitle>jsXe</errTitle>
-  <jarArgs></jarArgs>
+  <cmdLine></cmdLine>
   <chdir></chdir>
   <customProcName>true</customProcName>
   <stayAlive>false</stayAlive>
   <icon>jsxe.ico</icon>
   <jre>
-    <path></path>
     <minVersion>1.4.2</minVersion>
-    <maxVersion></maxVersion>
+    <dontUsePrivateJres>false</dontUsePrivateJres>
     <initialHeapSize>16</initialHeapSize>
     <maxHeapSize>64</maxHeapSize>
-    <opt>-Djava.endorsed.dirs=%EXEDIR%\\lib</opt>
+    <opt>-Dlaunch4j.exedir=&quot;%EXEDIR%&quot;</opt>
   </jre>
 </launch4jConfig>
